# ur3e-pick-and-place

./: .gitignore  AGENTS.md  CMakeLists.txt  INTEGRATION_NOTES.md  PROGRESS.md  package.xml  setup.cfg  setup.py  ur3e_new_prompt.md
config/: ros2_controllers.yaml
config/moveit/: ur3e.srdf  view_robot.rviz
launch/: bringup.launch.py
msg/: ArucoDetectionArray.msg  DetectedObject.msg
robotics-agent-skills-main/: CONTRIBUTING.md  README.md  install.sh
robotics-agent-skills-main/.github/ISSUE_TEMPLATE/: bug-report.md  eval-case.md  new-skill.md
src/ur3e_dashboard/: package.xml  setup.py
src/ur3e_dashboard/static/: index.html
src/ur3e_dashboard/ur3e_dashboard/: dashboard_server.py
src/ur3e_end_effectors/: package.xml  setup.cfg  setup.py
src/ur3e_end_effectors/ur3e_end_effectors/nodes/: gripper_state_node.py  vacuum_controller_node.py
src/ur3e_motion/: package.xml  setup.py
src/ur3e_motion/launch/: motion.launch.py
src/ur3e_motion/ur3e_motion/: motion_executor.py  pick_place_bt.py  pick_place_bt_node.py  pick_place_orchestrator.py
src/ur3e_msgs/: package.xml
src/ur3e_msgs/msg/: ArucoDetection.msg  BTStatus.msg  SafetyCommand.msg  YoloDetection.msg
src/ur3e_msgs/srv/: AssignPickGoal.srv  GetBTStatus.srv
src/ur3e_perception/: setup.cfg  setup.py
src/ur3e_perception/launch/: perception.launch.py
src/ur3e_perception/ur3e_perception/: perception_node.py
src/ur3e_sim_bringup/: package.xml  setup.py
src/ur3e_sim_bringup/config/moveit/: ompl_planning.yaml  view_all.rviz
src/ur3e_sim_bringup/launch/: bringup.launch.py  move_group.launch.py
src/ur3e_sim_bringup/scripts/: scene_initializer
src/ur3e_sim_bringup/ur3e_sim_bringup/: scene_initializer_node.py
src/ur3e_sim_bringup/urdf/: robotiq_2f_85_macro.urdf.xacro  target_cube.urdf  ur3e_with_effector.urdf.xacro
src/ur3e_sim_bringup/worlds/: ur3e_workcell.world
ur3e_perception/: perception_node.py
ur3e_sim_bringup/: scene_initializer_node.py
urdf/: table.urdf  target_cube.urdf  ur3e_with_effector.urdf.xacro
worlds/: ur3e_workcell.world
