<?xml version="1.0"?>
<package format="3">
  <name>ur3e_sim_bringup</name>
  <version>0.1.0</version>
  <description>Simulation bringup for UR3e (URDF, worlds, launch files, MoveIt2 config, scene initializer)</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>gripper_controllers</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>robotiq_description</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
