<?xml version="1.0"?>
<package format="3">
  <name>ur3e_perception</name>
  <version>0.1.0</version>
  <description>Merged perception node (ArUco + YOLOv8 + fusion) for UR3e pick-and-place</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>ur3e_msgs</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
