<?xml version="1.0"?>
<package format="3">
  <name>ur3e_end_effectors</name>
  <version>0.1.0</version>
  <description>End effector controllers for the UR3e (gripper + vacuum)</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
