<?xml version="1.0"?>
<package format="3">
  <name>ur3e_motion</name>
  <version>0.1.0</version>
  <description>Motion planning and behavior tree orchestration for UR3e pick-and-place</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
